Fixed row gap variable connection

--- a/_app/css/grid.css
+++ b/_app/css/grid.css
@@ -3,7 +3,7 @@
 	grid-template-columns: repeat(12, 1fr);
 	align-items: flex-start;
 	column-gap: var(--gap-column);
-	row-gap: var(--gap-column);
+	row-gap: var(--gap-row);
 }
 
 @media (min-width: 1024px) {
